# blank-canvas-mark

./: .gitignore  Circles.hs  Diet.hs  LICENSE  Makefile  README.md  blank-canvas-mark.cabal  sample.json  stack.yaml  tmp2.html  tmp3.html
hs/: Bezier.hs  BezierApplicative.hs  CirclesRandomSize.hs  CirclesRandomSizeApplicative.hs  CirclesUniformSize.hs  CirclesUniformSizeApplicative.hs  FillText.hs  FillTextApplicative.hs  Image.hs  ImageApplicative.hs  IsPointInPath.hs  IsPointInPathADo.hs  IsPointInPathApplicative.hs  IsPointInPathSequenceA.hs  IsPointInPathSequenceADo.hs  Life.hs  LifeApplicative.hs  Main.hs  MeasureText.hs  MeasureTextADo.hs  MeasureTextApplicative.hs  MeasureTextSequenceA.hs  MeasureTextSequenceADo.hs  MouseClicks.hs  MouseClicksApplicative.hs  Rave.hs  RaveApplicative.hs  RunTests.hs  StaticAsteroids.hs  StaticAsteroidsApplicative.hs  ToDataURL.hs  ToDataURLADo.hs  ToDataURLApplicative.hs  ToDataURLSequenceA.hs  ToDataURLSequenceADo.hs  Utils.hs
js/: Bezier.js  CirclesRandomSize.js  CirclesUniformSize.js  FillText.js  Image.js  ImageMark.js  IsPointInPath.js  MeasureText.js  Rave.js  StaticAsteroids.js  ToDataURL.js  benchmark.html  circles.html  drawCircles.js
results/: Android-Chrome-BlankCanvas.csv  Android-Chrome-JavaScript.csv  Linux-Chrome-BlankCanvas.csv  Linux-Chrome-JavaScript.csv  Linux-Chrome-JavaScript.json  Linux-Firefox-BlankCanvas.csv  Linux-Firefox-JavaScript.csv  Linux-Firefox-JavaScript.json  Makefile  Notes.md  OSX-Chrome-BlankCanvas.csv  OSX-Chrome-JavaScript.csv  OSX-Chrome-JavaScript.json  OSX-Firefox-BlankCanvas.csv  OSX-Firefox-JavaScript.csv  OSX-Firefox-JavaScript.json  OSX-Safari-BlankCanvas.csv  OSX-Safari-JavaScript.csv
summary/: results.html
testruns/: FIRST.md
