name:                blank-canvas-mark
version:             0.1.0.0
synopsis:            Benchmarks for blank-canvas
-- description:         
homepage:            https://github.com/ku-fpg/blank-canvas-mark
license:             BSD3
license-file:        LICENSE
author:              Andy Gill
maintainer:          andygill@ku.edu
copyright:           Copyright (c) 2014 The University of Kansas
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          images/cc.gif

executable blank-canvas-mark
  main-is:             Main.hs
  other-modules:       Bezier
                       CirclesRandomSize
                       CirclesUniformSize
                       FillText
                       Image
                       IsPointInPath
                       Life
                       MeasureText
                       Rave
                       
                       Paths_blank_canvas_mark
-- test a specific version of blank-canvas
  build-depends:       base         >= 4.5   && < 5,
                       base-compat  >= 0.8.1 && < 1,
                       blank-canvas == 0.5.0.1, 
                       criterion    >= 1.1   && < 1.2,
                       filepath,
                       keys         >= 3.10  && < 4,
                       random       >= 1.0   && < 1.2,
                       text         >= 0.11  && < 1.3
  hs-source-dirs:      hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

executable diet-criterion
  main-is:             Diet.hs
  build-depends:       aeson               >= 0.8,
                       base                >= 4.5   && < 5,
                       base-compat         >= 0.8.1 && < 1,
                       bytestring          >= 0.10.4,
                       criterion           >= 1.1   && < 1.2,
                       directory           >= 1.2,
                       statistics          >= 0.13,
                       text                >= 1.2,
                       transformers        >= 0.2,
                       transformers-compat >= 0.4,
                       vector              >= 0.10.9
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
